# frasier_openrave

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: one_pose_collision.json  table_shelf.json  two_pose_collision.json  whole_body_ik.json  whole_body_ik_collision.json  whole_body_traj.json  whole_body_traj_collision.json
include/frasier_openrave/: fraiser_openrave_perception.h  frasier_controller.h  frasier_openrave.h  frasier_openrave_controller.h
models/: hsrb.urdf  hsrb_simplified.urdf  hsrb_whole_body.urdf
nodes/: frasier_controller_test.cpp  frasier_openrave_test.cpp  frasier_perception_test.cpp
scripts/: hsr_traj_test.py  load_frasier.py
src/: fraiser_openrave_perception.cpp  frasier_controller.cpp  frasier_openrave.cpp  frasier_openrave_controller.cpp  frasier_openrave_grasp_planner.cpp  frasier_openrave_planner.cpp  frasier_openrave_utilities.cpp  sandbox.cpp
tests/: frasier_controller_test.cpp  frasier_grasp_planner_test.cpp  frasier_openrave_test.cpp
worlds/: hsr_arm_base.xml  hsr_empty_world.xml  hsr_table.xml  hsr_table_shelf.xml  hsr_whole_body.xml  pr2_empty_world.xml
